Pushing changes to CovidStocks note book and update IntraDay Json/CSV's

--- a/COVID-stocks/CovidStocks.ipynb
+++ b/COVID-stocks/CovidStocks.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "seriesIntra = 'TIME_SERIES_INTRADAY'\n",
     "interval60 = '60min'\n",
-    "intraQueryJSONurlSP60 = f\"{url}function={seriesIntra}&symbol={tickerSP}&interval={interval60}&apikey={AV_API_Key}\"\n",
-    "intraQueryJSONurlDOW60 = f\"{url}function={seriesIntra}&symbol={tickerDOW}&interval={interval60}&apikey={AV_API_Key}\""
+    "intraQueryJSONurlSP60 = f\"{url}function={seriesIntra}&symbol={tickerSP}&interval={interval60}&outputsize=full&apikey={AV_API_Key}\"\n",
+    "intraQueryJSONurlDOW60 = f\"{url}function={seriesIntra}&symbol={tickerDOW}&interval={interval60}&outputsize=full&apikey={AV_API_Key}\""
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 111,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,17 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "                          open       high        low      close     volume\nDate & Hour                                                               \n2020-04-17 15:05:14  2843.6799  2843.6799  2843.6799  2843.6799          0\n2020-04-17 14:30:00  2841.3401  2845.2800  2833.4299  2844.3401  145768911\n2020-04-17 13:30:00  2846.5200  2851.7600  2840.6299  2841.3799  244544945\n2020-04-17 12:30:00  2839.7800  2853.8000  2839.5400  2846.4800  260098934\n2020-04-17 11:30:00  2832.9800  2845.3999  2831.6799  2839.7500  288912688\n...                        ...        ...        ...        ...        ...\n2020-03-30 11:30:00  2604.4399  2607.7400  2590.6399  2607.5500  285330858\n2020-03-30 10:30:00  2576.8301  2605.1799  2575.5500  2604.4900  373708558\n2020-03-30 09:30:00  2565.8827  2602.7032  2565.3114  2577.6550          0\n2020-03-27 15:30:00  2607.0200  2608.3201  2534.9900  2540.0400  484449492\n2020-03-27 14:30:00  2571.8101  2615.9099  2564.8401  2607.0701  372513185\n\n[100 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n    </tr>\n    <tr>\n      <th>Date &amp; Hour</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-04-17 15:05:14</th>\n      <td>2843.6799</td>\n      <td>2843.6799</td>\n      <td>2843.6799</td>\n      <td>2843.6799</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 14:30:00</th>\n      <td>2841.3401</td>\n      <td>2845.2800</td>\n      <td>2833.4299</td>\n      <td>2844.3401</td>\n      <td>145768911</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 13:30:00</th>\n      <td>2846.5200</td>\n      <td>2851.7600</td>\n      <td>2840.6299</td>\n      <td>2841.3799</td>\n      <td>244544945</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 12:30:00</th>\n      <td>2839.7800</td>\n      <td>2853.8000</td>\n      <td>2839.5400</td>\n      <td>2846.4800</td>\n      <td>260098934</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 11:30:00</th>\n      <td>2832.9800</td>\n      <td>2845.3999</td>\n      <td>2831.6799</td>\n      <td>2839.7500</td>\n      <td>288912688</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-03-30 11:30:00</th>\n      <td>2604.4399</td>\n      <td>2607.7400</td>\n      <td>2590.6399</td>\n      <td>2607.5500</td>\n      <td>285330858</td>\n    </tr>\n    <tr>\n      <th>2020-03-30 10:30:00</th>\n      <td>2576.8301</td>\n      <td>2605.1799</td>\n      <td>2575.5500</td>\n      <td>2604.4900</td>\n      <td>373708558</td>\n    </tr>\n    <tr>\n      <th>2020-03-30 09:30:00</th>\n      <td>2565.8827</td>\n      <td>2602.7032</td>\n      <td>2565.3114</td>\n      <td>2577.6550</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-03-27 15:30:00</th>\n      <td>2607.0200</td>\n      <td>2608.3201</td>\n      <td>2534.9900</td>\n      <td>2540.0400</td>\n      <td>484449492</td>\n    </tr>\n    <tr>\n      <th>2020-03-27 14:30:00</th>\n      <td>2571.8101</td>\n      <td>2615.9099</td>\n      <td>2564.8401</td>\n      <td>2607.0701</td>\n      <td>372513185</td>\n    </tr>\n  </tbody>\n</table>\n<p>100 rows × 5 columns</p>\n</div>"
+      "text/plain": "                          open       high        low      close     volume\nDate & Hour                                                               \n2020-04-17 15:30:00  2852.5901  2879.2200  2852.5901  2873.5500  463391214\n2020-04-17 14:30:00  2841.3401  2852.8999  2833.4299  2852.6399  281511757\n2020-04-17 13:30:00  2846.5200  2851.7600  2840.6201  2841.3799  244544945\n2020-04-17 12:30:00  2839.7800  2853.8000  2839.5400  2846.4800  260098934\n2020-04-17 11:30:00  2832.9800  2845.3999  2831.6699  2839.7500  288599117\n...                        ...        ...        ...        ...        ...\n2020-01-23 13:30:00  3314.1001  3323.9199  3313.8301  3322.5400  143642234\n2020-01-23 12:30:00  3313.7100  3317.3899  3310.2400  3314.1101  126370139\n2020-01-23 11:30:00  3304.5801  3313.9900  3304.5200  3313.7400  149681291\n2020-01-23 10:30:00  3313.1101  3316.0300  3304.1201  3304.5801  195718389\n2020-01-23 09:30:00  3315.7700  3316.0100  3301.9199  3313.1299          0\n\n[420 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n    </tr>\n    <tr>\n      <th>Date &amp; Hour</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-04-17 15:30:00</th>\n      <td>2852.5901</td>\n      <td>2879.2200</td>\n      <td>2852.5901</td>\n      <td>2873.5500</td>\n      <td>463391214</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 14:30:00</th>\n      <td>2841.3401</td>\n      <td>2852.8999</td>\n      <td>2833.4299</td>\n      <td>2852.6399</td>\n      <td>281511757</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 13:30:00</th>\n      <td>2846.5200</td>\n      <td>2851.7600</td>\n      <td>2840.6201</td>\n      <td>2841.3799</td>\n      <td>244544945</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 12:30:00</th>\n      <td>2839.7800</td>\n      <td>2853.8000</td>\n      <td>2839.5400</td>\n      <td>2846.4800</td>\n      <td>260098934</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 11:30:00</th>\n      <td>2832.9800</td>\n      <td>2845.3999</td>\n      <td>2831.6699</td>\n      <td>2839.7500</td>\n      <td>288599117</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 13:30:00</th>\n      <td>3314.1001</td>\n      <td>3323.9199</td>\n      <td>3313.8301</td>\n      <td>3322.5400</td>\n      <td>143642234</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 12:30:00</th>\n      <td>3313.7100</td>\n      <td>3317.3899</td>\n      <td>3310.2400</td>\n      <td>3314.1101</td>\n      <td>126370139</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 11:30:00</th>\n      <td>3304.5801</td>\n      <td>3313.9900</td>\n      <td>3304.5200</td>\n      <td>3313.7400</td>\n      <td>149681291</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 10:30:00</th>\n      <td>3313.1101</td>\n      <td>3316.0300</td>\n      <td>3304.1201</td>\n      <td>3304.5801</td>\n      <td>195718389</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 09:30:00</th>\n      <td>3315.7700</td>\n      <td>3316.0100</td>\n      <td>3301.9199</td>\n      <td>3313.1299</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>420 rows × 5 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 91
+     "execution_count": 113
     }
    ],
    "source": [
@@ -218,17 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "                           open        high         low       close    volume\nDate & Hour                                                                  \n2020-04-17 15:05:54  23960.6699  23960.6699  23960.6699  23960.6699         0\n2020-04-17 14:30:00  23923.2891  23975.7207  23867.6309  23960.9297  21249013\n2020-04-17 13:30:00  23970.7793  24015.9004  23907.5293  23923.3906  33277379\n2020-04-17 12:30:00  23903.9395  24030.9805  23901.8691  23970.0605  33488591\n2020-04-17 11:30:00  23853.0996  23963.6406  23852.9805  23903.4395  41939805\n...                         ...         ...         ...         ...       ...\n2020-03-30 11:30:00  22142.1699  22169.1309  21985.2305  22149.1699  48837491\n2020-03-30 10:30:00  21841.9004  22144.9395  21820.0605  22143.5098  57427923\n2020-03-30 09:30:00  21678.2207  21891.2207  21522.0801  21845.0195         0\n2020-03-27 15:30:00  22250.8301  22262.2598  21604.4102  21612.6191  77974603\n2020-03-27 14:30:00  21967.9492  22327.5703  21868.4609  22251.8008  55456158\n\n[100 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n    </tr>\n    <tr>\n      <th>Date &amp; Hour</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-04-17 15:05:54</th>\n      <td>23960.6699</td>\n      <td>23960.6699</td>\n      <td>23960.6699</td>\n      <td>23960.6699</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 14:30:00</th>\n      <td>23923.2891</td>\n      <td>23975.7207</td>\n      <td>23867.6309</td>\n      <td>23960.9297</td>\n      <td>21249013</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 13:30:00</th>\n      <td>23970.7793</td>\n      <td>24015.9004</td>\n      <td>23907.5293</td>\n      <td>23923.3906</td>\n      <td>33277379</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 12:30:00</th>\n      <td>23903.9395</td>\n      <td>24030.9805</td>\n      <td>23901.8691</td>\n      <td>23970.0605</td>\n      <td>33488591</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 11:30:00</th>\n      <td>23853.0996</td>\n      <td>23963.6406</td>\n      <td>23852.9805</td>\n      <td>23903.4395</td>\n      <td>41939805</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-03-30 11:30:00</th>\n      <td>22142.1699</td>\n      <td>22169.1309</td>\n      <td>21985.2305</td>\n      <td>22149.1699</td>\n      <td>48837491</td>\n    </tr>\n    <tr>\n      <th>2020-03-30 10:30:00</th>\n      <td>21841.9004</td>\n      <td>22144.9395</td>\n      <td>21820.0605</td>\n      <td>22143.5098</td>\n      <td>57427923</td>\n    </tr>\n    <tr>\n      <th>2020-03-30 09:30:00</th>\n      <td>21678.2207</td>\n      <td>21891.2207</td>\n      <td>21522.0801</td>\n      <td>21845.0195</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-03-27 15:30:00</th>\n      <td>22250.8301</td>\n      <td>22262.2598</td>\n      <td>21604.4102</td>\n      <td>21612.6191</td>\n      <td>77974603</td>\n    </tr>\n    <tr>\n      <th>2020-03-27 14:30:00</th>\n      <td>21967.9492</td>\n      <td>22327.5703</td>\n      <td>21868.4609</td>\n      <td>22251.8008</td>\n      <td>55456158</td>\n    </tr>\n  </tbody>\n</table>\n<p>100 rows × 5 columns</p>\n</div>"
+      "text/plain": "                           open        high         low       close    volume\nDate & Hour                                                                  \n2020-04-17 15:30:00  24038.8496  24264.2109  24038.8496  24232.0391  65742022\n2020-04-17 14:30:00  23923.2891  24040.8906  23867.6309  24039.0508  40621828\n2020-04-17 13:30:00  23970.7793  24015.9004  23907.5293  23923.3906  33277379\n2020-04-17 12:30:00  23903.9395  24030.9805  23901.8691  23970.0605  33488591\n2020-04-17 11:30:00  23853.0996  23963.6406  23852.9805  23903.4395  41939805\n...                         ...         ...         ...         ...       ...\n2020-01-23 13:30:00  29079.0098  29159.3809  29076.1191  29151.6699  19668253\n2020-01-23 12:30:00  29059.9805  29105.9199  29038.5195  29079.6699  17054788\n2020-01-23 11:30:00  28988.0605  29067.0996  28987.2793  29060.3398  22362341\n2020-01-23 10:30:00  29077.3203  29115.2109  28979.8301  28987.8906  28504995\n2020-01-23 09:30:00  29111.0195  29111.0195  28966.9805  29077.1602         0\n\n[420 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n    </tr>\n    <tr>\n      <th>Date &amp; Hour</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-04-17 15:30:00</th>\n      <td>24038.8496</td>\n      <td>24264.2109</td>\n      <td>24038.8496</td>\n      <td>24232.0391</td>\n      <td>65742022</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 14:30:00</th>\n      <td>23923.2891</td>\n      <td>24040.8906</td>\n      <td>23867.6309</td>\n      <td>24039.0508</td>\n      <td>40621828</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 13:30:00</th>\n      <td>23970.7793</td>\n      <td>24015.9004</td>\n      <td>23907.5293</td>\n      <td>23923.3906</td>\n      <td>33277379</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 12:30:00</th>\n      <td>23903.9395</td>\n      <td>24030.9805</td>\n      <td>23901.8691</td>\n      <td>23970.0605</td>\n      <td>33488591</td>\n    </tr>\n    <tr>\n      <th>2020-04-17 11:30:00</th>\n      <td>23853.0996</td>\n      <td>23963.6406</td>\n      <td>23852.9805</td>\n      <td>23903.4395</td>\n      <td>41939805</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 13:30:00</th>\n      <td>29079.0098</td>\n      <td>29159.3809</td>\n      <td>29076.1191</td>\n      <td>29151.6699</td>\n      <td>19668253</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 12:30:00</th>\n      <td>29059.9805</td>\n      <td>29105.9199</td>\n      <td>29038.5195</td>\n      <td>29079.6699</td>\n      <td>17054788</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 11:30:00</th>\n      <td>28988.0605</td>\n      <td>29067.0996</td>\n      <td>28987.2793</td>\n      <td>29060.3398</td>\n      <td>22362341</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 10:30:00</th>\n      <td>29077.3203</td>\n      <td>29115.2109</td>\n      <td>28979.8301</td>\n      <td>28987.8906</td>\n      <td>28504995</td>\n    </tr>\n    <tr>\n      <th>2020-01-23 09:30:00</th>\n      <td>29111.0195</td>\n      <td>29111.0195</td>\n      <td>28966.9805</td>\n      <td>29077.1602</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>420 rows × 5 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 92
+     "execution_count": 114
     }
    ],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
