--- a/COVID-stocks/CovidStocks.ipynb
+++ b/COVID-stocks/CovidStocks.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "# pip install alpha-vantage\n",
     "# pip install pandas\n",
-    "# pip install matplotlib"
+    "# pip install matplotlib\n",
+    "# hello"
    ]
   },
   {
