--- a/COVID-news/News_Shares.ipynb
+++ b/COVID-news/News_Shares.ipynb
@@ -71,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x1de3d3d6e08>"
+       "<pymongo.results.InsertManyResult at 0x1148340f0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,13 +94,42 @@
     "collection.insert_many(news_shares_dict)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'newspaper': 'The Wall Street Journal',\n",
+       "  'date': '2020-04-06',\n",
+       "  'title': \"Need a Small Business Loan? Here's What You Need to Know\",\n",
+       "  'shares': 1298,\n",
+       "  '_id': ObjectId('5e9c8524e6433dc081507a20')}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-PythonData]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-.conda-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -112,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
