--- a/COVID-news/NLP COVID News Media.ipynb
+++ b/COVID-news/NLP COVID News Media.ipynb
@@ -4889,24 +4889,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['weekly_stock_data']\n",
+    "\n",
+    "with open('WeeklyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "WeeklyCovidStocks_SP500"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['weekly_stock_data']\n",
+    "\n",
+    "with open('WeeklyCovidStocks_SP500.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
   },
   {
    "cell_type": "code",
