--- a/COVID-news/NLP COVID News Media.ipynb
+++ b/COVID-news/NLP COVID News Media.ipynb
@@ -6736,7 +6736,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['daily_stock_data']\n",
+    "\n",
+    "with open('DailyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['daily_stock_data']\n",
+    "\n",
+    "with open('DailyCovidStocks_SP500.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6756,20 +6802,6 @@
     "\n",
     "client.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
