cleaned up repo

--- a/COVID-news/NLP COVID News Media.ipynb
+++ b/COVID-news/NLP COVID News Media.ipynb
@@ -4546,7 +4546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -4699,12 +4699,12 @@
     "                url = data['url']\n",
     "                date = data ['date']\n",
     "                shares = data ['shares']\n",
-    "                df = df.append({'newspaper': paper, 'date': date, 'title': title, \"url\": title, 'shares': shares}, ignore_index=True)"
+    "                df = df.append({'newspaper': paper, 'date': date, 'title': title, \"url\": url, 'shares': shares}, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -4741,7 +4741,7 @@
        "      <td>Breitbart</td>\n",
        "      <td>2020-01-20</td>\n",
        "      <td>China Says 'No Need to Panic' as Deadly Virus ...</td>\n",
-       "      <td>China Says 'No Need to Panic' as Deadly Virus ...</td>\n",
+       "      <td>https://www.breitbart.com/asia/2020/01/20/chin...</td>\n",
        "      <td>{'facebook': 828}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4749,7 +4749,7 @@
        "      <td>Breitbart</td>\n",
        "      <td>2020-01-26</td>\n",
        "      <td>Arizona Resident is Fifth Coronavirus Case in ...</td>\n",
-       "      <td>Arizona Resident is Fifth Coronavirus Case in ...</td>\n",
+       "      <td>https://www.breitbart.com/politics/2020/01/26/...</td>\n",
        "      <td>{'facebook': 736}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4757,7 +4757,7 @@
        "      <td>Breitbart</td>\n",
        "      <td>2020-01-23</td>\n",
        "      <td>China Lockdown Extends to Five Cities, 20 Mill...</td>\n",
-       "      <td>China Lockdown Extends to Five Cities, 20 Mill...</td>\n",
+       "      <td>https://www.breitbart.com/asia/2020/01/23/chin...</td>\n",
        "      <td>{'facebook': 448}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4765,7 +4765,7 @@
        "      <td>Breitbart</td>\n",
        "      <td>2020-01-22</td>\n",
        "      <td>EXCLUSIVE: Chinese Coronavirus 'Really Serious...</td>\n",
-       "      <td>EXCLUSIVE: Chinese Coronavirus 'Really Serious...</td>\n",
+       "      <td>https://www.breitbart.com/border/2020/01/22/ex...</td>\n",
        "      <td>{'facebook': 351}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4773,7 +4773,7 @@
        "      <td>Breitbart</td>\n",
        "      <td>2020-01-22</td>\n",
        "      <td>Possible Case of Chinese Coronavirus Reaches M...</td>\n",
-       "      <td>Possible Case of Chinese Coronavirus Reaches M...</td>\n",
+       "      <td>https://www.breitbart.com/border/2020/01/22/po...</td>\n",
        "      <td>{'facebook': 321}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4789,7 +4789,7 @@
        "      <td>WSJ</td>\n",
        "      <td>2020-04-07</td>\n",
        "      <td>India Again Allows Export of Antimalarial Drug...</td>\n",
-       "      <td>India Again Allows Export of Antimalarial Drug...</td>\n",
+       "      <td>https://www.wsj.com/articles/india-again-allow...</td>\n",
        "      <td>{'facebook': 1546}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4797,7 +4797,7 @@
        "      <td>WSJ</td>\n",
        "      <td>2020-04-06</td>\n",
        "      <td>Coronavirus Hits Meat Plants as Some Workers G...</td>\n",
-       "      <td>Coronavirus Hits Meat Plants as Some Workers G...</td>\n",
+       "      <td>https://www.wsj.com/articles/coronavirus-hits-...</td>\n",
        "      <td>{'facebook': 1507}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4805,7 +4805,7 @@
        "      <td>WSJ</td>\n",
        "      <td>2020-04-06</td>\n",
        "      <td>Opinion | A Failure of Discipline Under Capt. ...</td>\n",
-       "      <td>Opinion | A Failure of Discipline Under Capt. ...</td>\n",
+       "      <td>https://www.wsj.com/articles/a-failure-of-disc...</td>\n",
        "      <td>{'facebook': 1482}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4813,7 +4813,7 @@
        "      <td>WSJ</td>\n",
        "      <td>2020-04-11</td>\n",
        "      <td>U.S. Coronavirus Death Toll Passes Italy, Beco...</td>\n",
-       "      <td>U.S. Coronavirus Death Toll Passes Italy, Beco...</td>\n",
+       "      <td>https://www.wsj.com/articles/health-officials-...</td>\n",
        "      <td>{'facebook': 1342}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4821,7 +4821,7 @@
        "      <td>WSJ</td>\n",
        "      <td>2020-04-06</td>\n",
        "      <td>Need a Small Business Loan? Here's What You Ne...</td>\n",
-       "      <td>Need a Small Business Loan? Here's What You Ne...</td>\n",
+       "      <td>https://www.wsj.com/articles/how-to-apply-for-...</td>\n",
        "      <td>{'facebook': 1298}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4857,22 +4857,22 @@
        "2733  Need a Small Business Loan? Here's What You Ne...   \n",
        "\n",
        "                                                    url              shares  \n",
-       "0     China Says 'No Need to Panic' as Deadly Virus ...   {'facebook': 828}  \n",
-       "1     Arizona Resident is Fifth Coronavirus Case in ...   {'facebook': 736}  \n",
-       "2     China Lockdown Extends to Five Cities, 20 Mill...   {'facebook': 448}  \n",
-       "3     EXCLUSIVE: Chinese Coronavirus 'Really Serious...   {'facebook': 351}  \n",
-       "4     Possible Case of Chinese Coronavirus Reaches M...   {'facebook': 321}  \n",
+       "0     https://www.breitbart.com/asia/2020/01/20/chin...   {'facebook': 828}  \n",
+       "1     https://www.breitbart.com/politics/2020/01/26/...   {'facebook': 736}  \n",
+       "2     https://www.breitbart.com/asia/2020/01/23/chin...   {'facebook': 448}  \n",
+       "3     https://www.breitbart.com/border/2020/01/22/ex...   {'facebook': 351}  \n",
+       "4     https://www.breitbart.com/border/2020/01/22/po...   {'facebook': 321}  \n",
        "...                                                 ...                 ...  \n",
-       "2729  India Again Allows Export of Antimalarial Drug...  {'facebook': 1546}  \n",
-       "2730  Coronavirus Hits Meat Plants as Some Workers G...  {'facebook': 1507}  \n",
-       "2731  Opinion | A Failure of Discipline Under Capt. ...  {'facebook': 1482}  \n",
-       "2732  U.S. Coronavirus Death Toll Passes Italy, Beco...  {'facebook': 1342}  \n",
-       "2733  Need a Small Business Loan? Here's What You Ne...  {'facebook': 1298}  \n",
+       "2729  https://www.wsj.com/articles/india-again-allow...  {'facebook': 1546}  \n",
+       "2730  https://www.wsj.com/articles/coronavirus-hits-...  {'facebook': 1507}  \n",
+       "2731  https://www.wsj.com/articles/a-failure-of-disc...  {'facebook': 1482}  \n",
+       "2732  https://www.wsj.com/articles/health-officials-...  {'facebook': 1342}  \n",
+       "2733  https://www.wsj.com/articles/how-to-apply-for-...  {'facebook': 1298}  \n",
        "\n",
        "[2734 rows x 5 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4883,7 +4883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6782,7 +6782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
