--- a/COVID-stocks/CovidStocks.ipynb
+++ b/COVID-stocks/CovidStocks.ipynb
@@ -1571,6 +1571,87 @@
     "weeklyDFdow.to_csv(\"Stock Data/WeeklyCovidStocks_DOWindustrial.csv\")\n",
     "monthlyDFdow.to_csv(\"Stock Data/MonthlyCovidStocks_DOWindustrial.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "insert_one() takes from 2 to 4 positional arguments but 5 were given",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-40c9ca558298>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mcollection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_data1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: insert_one() takes from 2 to 4 positional arguments but 5 were given"
+     ]
+    }
+   ],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['stockDataSP500']\n",
+    "\n",
+    "with open('Stock Data/IntraDayCovidStocks_60min_SP500.json') as g:\n",
+    "    file_data1 = json.load(g)\n",
+    "\n",
+    "with open('Stock Data/DailyCovidStocks_SP500.json') as g:\n",
+    "    file_data2 = json.load(g)\n",
+    "\n",
+    "with open('Stock Data/WeeklyCovidStocks_SP500.json') as g:\n",
+    "    file_data3 = json.load(g)\n",
+    "\n",
+    "with open('Stock Data/MonthlyCovidStocks_SP500.json') as g:\n",
+    "    file_data4 = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data1, file_data2, file_data3, file_data4)\n",
+    "\n",
+    "\n",
+    "client.close()\n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['stockDataDowJonesInd']\n",
+    "\n",
+    "with open('Stock Data/IntraDayCovidStocks_60min_DOWindustrial.json') as g:\n",
+    "    file_data1 = json.load(g)\n",
+    "\n",
+    "with open('Stock Data/DailyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data2 = json.load(g)\n",
+    "\n",
+    "with open('Stock Data/WeeklyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data3 = json.load(g)\n",
+    "\n",
+    "with open('Stock Data/MonthlyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data4 = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insertMany(file_data1, file_data2, file_data3, file_data4)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
   }
  ],
  "metadata": {
@@ -1590,7 +1671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
